added keywords in blog

--- a/src/content/blog/supabase-with-nextjs.mdx
+++ b/src/content/blog/supabase-with-nextjs.mdx
@@ -4,6 +4,12 @@ description: Learn how to create a Supabase project, add some sample data to you
 image: /images/blog/supabase-with-nextjs/supabase.jpg
 category: Database
 date: 2023-07-05
+tags:
+  - supabase
+  - nextjs
+  - database
+  - database intigration
+  - nextjs 13 with supabase setup
 ---
 
 ### What is Supabase?
